--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
     </section>
     <!-- process sections  -->
 
-    <section class="ftco-section">
+    <section class="ftco-section list-cover-two">
       <div class="container-fluid">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -395,7 +395,13 @@
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Wash & Fold</h3>
-                <p>
+                <p
+                  style="
+                    color: black;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-weight: 400 !important;
+                  "
+                >
                   A whiter-than-white shirt. A crisp cotton saree. A well-worn
                   pair of rugged jeans. King-sized bed linen. Monday-to-Friday
                   socks. Well, this load is going to need high levels of hygiene
@@ -416,7 +422,13 @@
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Wash & Iron</h3>
-                <p>
+                <p
+                  style="
+                    color: black;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-weight: 400 !important;
+                  "
+                >
                   Office wear shirt. Evening wear salwar kameez. Daily wear
                   pyjamas. Sportswear sweat pants. Holiday wear bermudas. Hmm,
                   that’s a time, energy and space consuming list if you ever saw
@@ -437,7 +449,13 @@
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Steam iron</h3>
-                <p>
+                <p
+                  style="
+                    color: black;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-weight: 400 !important;
+                  "
+                >
                   A wrinkled business shirt. A crumpled dress. A badly creased
                   pair of trousers. A crushed uniform. A crinkled scarf. Oh-oh,
                   if this lot is oddly familiar, strike while the iron is hot.
@@ -457,7 +475,13 @@
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Dry Cleaning</h3>
-                <p>
+                <p
+                  style="
+                    color: black;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-weight: 400 !important;
+                  "
+                >
                   A delicate silk dress. A tailored suit. A fancy evening gown.
                   Your finest and most treasured garments need extra special
                   care. We understand what it means: you’re not just looking for
@@ -471,6 +495,10 @@
         </div>
       </div>
     </section>
+
+    <!--try-->
+
+    <!--try/-->
 
     <section class="ftco-section ftco-no-pt">
       <div class="container-fluid">
@@ -1016,17 +1044,17 @@
         </div>
       </div>
     </section>
-
-    <section class="ftco-section">
+    <section class="ftco-section"></section>
+    <section class="ftco-section list-cover">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <span class="subheading mb-3">Price &amp; Plans</span>
-            <h2>Choose Your Perfect Plans</h2>
+            <h5 style="color: white">Most Awaited Bundle Pack</h5>
+            <h2 style="color: white">Choose Your Perfect Plans</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="block-7">
               <div class="text-center">
                 <div
@@ -1034,37 +1062,33 @@
                 >
                   <span class="fa flaticon-sprayer"></span>
                 </div>
-                <h4 class="heading-2">Famliy Saver</h4>
+                <h4 class="heading-2">Family Saver</h4>
                 <span class="price"
                   ><sup>₹</sup> <span class="number">999</span></span
                 >
-
                 <ul class="pricing-text mb-5">
                   <li>
-                    <span class="fa fa-check mr-2"></span>Wash, Fold and Press
+                    <span class="fa fa-check mr-2"></span>Wash, Fold, and Press
                     Service
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>stain removal or
-                    garment repairs
+                    <span class="fa fa-check mr-2"></span>Stain Removal or
+                    Garment Repairs
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>weekly for any 5 loads
-                    with 10% discount.
+                    <span class="fa fa-check mr-2"></span>Weekly for Any 5 Loads
+                    with 10% Discount
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>Subscription covers
-                    the cost of 50 loads of laundry per month for family
-                    requirements.
+                    <span class="fa fa-check mr-2"></span>50 Loads of Laundry
                   </li>
-                  <li><span class="fa fa-check mr-2"></span>express service</li>
+                  <li><span class="fa fa-check mr-2"></span>Express Service</li>
                 </ul>
-
                 <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="block-7 active">
               <div class="text-center">
                 <div
@@ -1076,33 +1100,30 @@
                 <span class="price"
                   ><sup>₹</sup> <span class="number">899</span></span
                 >
-
                 <ul class="pricing-text mb-5">
                   <li>
-                    <span class="fa fa-check mr-2"></span>Wash, dry and steam
-                    press service.
+                    <span class="fa fa-check mr-2"></span>Wash, Dry, and Steam
+                    Press Service
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>Premium dry-cleaning
-                    service for suits and formal wear.
+                    <span class="fa fa-check mr-2"></span>Premium Dry-Cleaning
+                    Service for Suits
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>Subscription includes
-                    unlimited laundry services.
+                    <span class="fa fa-check mr-2"></span>Unlimited Laundry
+                    Services
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>12 loads of laundry
-                    per month for a typical household
+                    <span class="fa fa-check mr-2"></span>12 Loads of Laundry
+                    per Month
                   </li>
-                  <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
+                  <li><span class="fa fa-check mr-2"></span>Deep Cleaning</li>
                 </ul>
-
                 <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
               </div>
             </div>
           </div>
-
-          <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="block-7">
               <div class="text-center">
                 <div
@@ -1114,63 +1135,25 @@
                 <span class="price"
                   ><sup>₹</sup> <span class="number">49-120</span></span
                 >
-
                 <ul class="pricing-text mb-5">
                   <li>
-                    <span class="fa fa-check mr-2"></span>Wash and fold service
-                    for regular Clothes
+                    <span class="fa fa-check mr-2"></span>Wash and Fold Service
+                    for Regular Clothes
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>Ideal for individuals
-                    or families with busy schedules
+                    <span class="fa fa-check mr-2"></span>Ideal for Individuals
+                    or Families
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>hassle-free laundry
-                    solutions
+                    <span class="fa fa-check mr-2"></span>Hassle-Free Laundry
+                    Solutions
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>Subscription typically
-                    covers the cost of 5/10
+                    <span class="fa fa-check mr-2"></span>Subscription Covers
+                    5-10 Loads
                   </li>
-                  <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
+                  <li><span class="fa fa-check mr-2"></span>Deep Cleaning</li>
                 </ul>
-
-                <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 ftco-animate">
-            <div class="block-7">
-              <div class="text-center">
-                <div
-                  class="icon d-flex align-items-center justify-content-center"
-                >
-                  <span class="fa flaticon-cleaning"></span>
-                </div>
-                <h4 class="heading-2">Business Attire</h4>
-                <span class="price"
-                  ><sup>₹</sup><span class="number">179</span></span
-                >
-
-                <ul class="pricing-text mb-5">
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Pickup and delivery of
-                    business attire for professionals
-                  </li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Pressing and garment
-                    steaming included
-                  </li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Subscription typically
-                    includes 8 pieces of business attire per month.
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Iron and Dry Cleaning
-                  </li>
-                </ul>
-
                 <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
               </div>
             </div>
