--- a/pricing.html
+++ b/pricing.html
@@ -1482,7 +1482,7 @@
     </div>
   </section>
 
-    <footer class="footer ftco-section table-cover">
+    <footer class="footer ftco-section footer-cover">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
