--- a/pricing.html
+++ b/pricing.html
@@ -1482,140 +1482,144 @@
     </div>
   </section>
 
-    <footer class="footer ftco-section footer-cover">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-            <h2 class="footer-heading">Cleaning Company</h2>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              with the necessary regelialia. It is a paradisematic country, in
-              which roasted parts of sentences fly into your mouth.
-            </p>
-            <ul
-              class="ftco-footer-social list-unstyled float-md-left float-lft mt-4"
-            >
-              <li class="ftco-animate">
-                <a href="#"><span class="fa fa-twitter"></span></a>
-              </li>
-              <li class="ftco-animate">
-                <a href="#"><span class="fa fa-facebook"></span></a>
-              </li>
-              <li class="ftco-animate">
-                <a href="#"><span class="fa fa-instagram"></span></a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-            <h2 class="footer-heading">Latest News</h2>
-            <div class="block-21 mb-4 d-flex">
-              <a
-                class="img mr-4 rounded"
-                style="background-image: url(images/image_1.jpg)"
-              ></a>
-              <div class="text">
-                <h3 class="heading">
+  <footer class="footer ftco-section footer-cover">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+          <h2 class="footer-heading">Laugh-O-Laundry</h2>
+          <p>
+            Each member brings a wealth of experience, dedication, and passion
+            for delivering top-notch cleaning services. Our skilled
+            professionals are trained in the latest techniques and use
+            state-of-the-art equipment to ensure your garments receive the
+            highest level of care.
+          </p>
+          <ul
+            class="ftco-footer-social list-unstyled float-md-left float-lft mt-4"
+          >
+            <li class="ftco-animate">
+              <a href="#"><span class="fa fa-twitter"></span></a>
+            </li>
+            <li class="ftco-animate">
+              <a href="#"><span class="fa fa-facebook"></span></a>
+            </li>
+            <li class="ftco-animate">
+              <a href="#"><span class="fa fa-instagram"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+          <h2 class="footer-heading">Latest News</h2>
+          <div class="block-21 mb-4 d-flex">
+            <a
+              class="img mr-4 rounded"
+              style="background-image: url(images/image_1.jpg)"
+            ></a>
+            <div class="text">
+              <h3 class="heading">
+                <a href="#"
+                  >Even the all-powerful Pointing has no control about</a
+                >
+              </h3>
+              <div class="meta">
+                <div>
                   <a href="#"
-                    >Even the all-powerful Pointing has no control about</a
+                    ><span class="icon-calendar"></span> Mar. 04, 2020</a
                   >
-                </h3>
-                <div class="meta">
-                  <div>
-                    <a href="#"
-                      ><span class="icon-calendar"></span> Mar. 04, 2020</a
-                    >
-                  </div>
-                  <div>
-                    <a href="#"><span class="icon-person"></span> Admin</a>
-                  </div>
-                  <div>
-                    <a href="#"><span class="icon-chat"></span> 19</a>
-                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="block-21 mb-4 d-flex">
-              <a
-                class="img mr-4 rounded"
-                style="background-image: url(images/image_2.jpg)"
-              ></a>
-              <div class="text">
-                <h3 class="heading">
-                  <a href="#"
-                    >Even the all-powerful Pointing has no control about</a
-                  >
-                </h3>
-                <div class="meta">
-                  <div>
-                    <a href="#"
-                      ><span class="icon-calendar"></span> Mar. 04, 2020</a
-                    >
-                  </div>
-                  <div>
-                    <a href="#"><span class="icon-person"></span> Admin</a>
-                  </div>
-                  <div>
-                    <a href="#"><span class="icon-chat"></span> 19</a>
-                  </div>
+                <div>
+                  <a href="#"><span class="icon-person"></span> Admin</a>
+                </div>
+                <div>
+                  <a href="#"><span class="icon-chat"></span> 19</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
-            <h2 class="footer-heading">Quick Links</h2>
-            <ul class="list-unstyled">
-              <li><a href="#" class="py-1 d-block">Home</a></li>
-              <li><a href="#" class="py-1 d-block">About</a></li>
-              <li><a href="#" class="py-1 d-block">Services</a></li>
-              <li><a href="#" class="py-1 d-block">Works</a></li>
-              <li><a href="#" class="py-1 d-block">Blog</a></li>
-              <li><a href="#" class="py-1 d-block">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-            <h2 class="footer-heading">Have a Questions?</h2>
-            <div class="block-23 mb-3">
-              <ul>
-                <li>
-                  <span class="icon fa fa-map-marker"></span
-                  ><span class="text"
-                    >203 Fake St. Mountain View, San Francisco, California,
-                    USA</span
-                  >
-                </li>
-                <li>
+          <div class="block-21 mb-4 d-flex">
+            <a
+              class="img mr-4 rounded"
+              style="background-image: url(images/image_2.jpg)"
+            ></a>
+            <div class="text">
+              <h3 class="heading">
+                <a href="#"
+                  >Even the all-powerful Pointing has no control about</a
+                >
+              </h3>
+              <div class="meta">
+                <div>
                   <a href="#"
-                    ><span class="icon fa fa-phone"></span
-                    ><span class="text">+2 392 3929 210</span></a
+                    ><span class="icon-calendar"></span> Mar. 04, 2020</a
                   >
-                </li>
-                <li>
-                  <a href="#"
-                    ><span class="icon fa fa-paper-plane"></span
-                    ><span class="text">info@yourdomain.com</span></a
-                  >
-                </li>
-              </ul>
+                </div>
+                <div>
+                  <a href="#"><span class="icon-person"></span> Admin</a>
+                </div>
+                <div>
+                  <a href="#"><span class="icon-chat"></span> 19</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="row mt-5">
-          <div class="col-md-12 text-center">
-            <p class="copyright">
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              All rights reserved | This template is made with
-              <i class="fa fa-heart" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+        <div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
+          <h2 class="footer-heading">Quick Links</h2>
+          <ul class="list-unstyled">
+            <li><a href="#" class="py-1 d-block">Home</a></li>
+            <li><a href="#" class="py-1 d-block">About</a></li>
+            <li><a href="#" class="py-1 d-block">Services</a></li>
+            <li><a href="#" class="py-1 d-block">Blog</a></li>
+            <li><a href="#" class="py-1 d-block">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+          <h2 class="footer-heading">Have a Questions?</h2>
+          <div class="block-23 mb-3">
+            <ul>
+              <li>
+                <span class="icon fa fa-map-marker"></span
+                ><span class="text"
+                  >891 Jessore Road, 2nd Fl, Rupantar Building, Bangur Avenue,
+                  North 24 Parganas, Dum Dum Park, West Bengal, India,
+                  700055</span
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><span class="icon fa fa-phone"></span
+                  ><span class="text">+91 7439117221</span></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><span class="icon fa fa-paper-plane"></span
+                  ><span class="text">Hello@laugholaundry.com</span></a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </footer>
+      <div class="row mt-5">
+        <div class="col-md-12 text-center">
+          <p class="copyright">
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            All rights reserved | This Website is made with
+            <i class="fa fa-heart" aria-hidden="true"></i> by
+            <a href="https://cognicierge-solutions.com/" target="_blank"
+              >Cognierge Solutions</a
+            >
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
