--- a/pricing.html
+++ b/pricing.html
@@ -150,7 +150,7 @@
   <section class="table-cover">
     <div class="container">
       <div class="heading-section text-center ftco-animate">
-        <h2 class="text-center" style="color: white;">UNISEX RATE LIST</h2>
+        <h2 class="text-center">UNISEX RATE LIST</h2>
       </div>
       <table>
         <thead>
@@ -874,7 +874,7 @@
     </div>
     <div class="container" >
       <div class=" heading-section text-center ftco-animate">
-        <h2 style="text-align: center; color: white;">RATE LIST FOR KIDS</h2>
+        <h2 style="text-align: center;">RATE LIST FOR KIDS</h2>
       </div>
       <table>
         <thead>
@@ -1099,7 +1099,7 @@
   <body>
   <div class="container">
     <div class=" heading-section text-center ftco-animate">
-      <h2 style="text-align: center; color: white;">HOUSEHOLD RATE CART</h2>
+      <h2 style="text-align: center; ">HOUSEHOLD RATE CART</h2>
     </div>
     <table>
       <thead>
