--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
       </div>
     </section>
     <!-- The text is been set to the main frame of the set  -->
+
     <section class="ftco-section ftco-no-pt ftco-no-pb">
       <div class="container-fluid">
         <div class="row d-flex no-gutters">
@@ -377,7 +378,7 @@
     </section>
     <!-- process sections  -->
 
-    <section class="ftco-section list-cover-two">
+    <section class="ftco-section list-cover-two service-roll">
       <div class="container-fluid">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -409,7 +410,6 @@
                   folding. We know what it means: you didn’t just download an
                   app … you offloaded a weight off your mind.
                 </p>
-                <p><a href="#" class="btn-custom">Read more</a></p>
               </div>
             </div>
           </div>
@@ -436,7 +436,6 @@
                   for a laundry service now … you’re rearranging your day and
                   life.
                 </p>
-                <p><a href="#" class="btn-custom">Read more</a></p>
               </div>
             </div>
           </div>
@@ -462,7 +461,6 @@
                   We know what it means: you’re not looking for well-pressed
                   garments… you’re ironing out the stresses of the day.
                 </p>
-                <p><a href="#" class="btn-custom">Read more</a></p>
               </div>
             </div>
           </div>
@@ -488,7 +486,6 @@
                   clean clothes… you’re ensuring they look their best for every
                   occasion.
                 </p>
-                <p><a href="#" class="btn-custom">Read more</a></p>
               </div>
             </div>
           </div>
@@ -772,7 +769,7 @@
       </div>
     </section>
     <!-- The Set to the  -->
-    <section class="ftco-section ftco-no-pb">
+    <section class="ftco-section ftco-no-pb .service-roll">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -787,7 +784,7 @@
               style="background-image: url(images/about.jpg)"
             >
               <a
-                href="images/about.jpg"
+                href="images/serviceone.jpg"
                 class="icon image-popup d-flex justify-content-center align-items-center"
               >
                 <span class="fa fa-expand"></span>
@@ -802,10 +799,10 @@
           <div class="col-md-6 col-lg-3 ftco-animate">
             <div
               class="work img d-flex align-items-center"
-              style="background-image: url(images/about.jpg)"
+              style="background-image: url(images/servicetwo.jpg)"
             >
               <a
-                href="images/about.jpg"
+                href="images/servicetwo.jpg"
                 class="icon image-popup d-flex justify-content-center align-items-center"
               >
                 <span class="fa fa-expand"></span>
@@ -820,10 +817,10 @@
           <div class="col-md-6 col-lg-3 ftco-animate">
             <div
               class="work img d-flex align-items-center"
-              style="background-image: url(images/about.jpg)"
+              style="background-image: url(images/servicefour.jpg)"
             >
               <a
-                href="images/about.jpg"
+                href="images/servicethree.jpg"
                 class="icon image-popup d-flex justify-content-center align-items-center"
               >
                 <span class="fa fa-expand"></span>
@@ -838,7 +835,7 @@
           <div class="col-md-6 col-lg-3 ftco-animate">
             <div
               class="work img d-flex align-items-center"
-              style="background-image: url(images/about.jpg)"
+              style="background-image: url(images/servicethree.jpg)"
             >
               <a
                 href="images/about.jpg"
@@ -854,7 +851,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-3 ftco-animate">
+          <!-- <div class="col-md-6 col-lg-3 ftco-animate">
             <div
               class="work img d-flex align-items-center"
               style="background-image: url(images/about.jpg)"
@@ -871,8 +868,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-3 ftco-animate">
+          </div> -->
+          <!-- <div class="col-md-6 col-lg-3 ftco-animate">
             <div
               class="work img d-flex align-items-center"
               style="background-image: url(images/about.jpg)"
@@ -889,8 +886,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-3 ftco-animate">
+          </div> -->
+          <!-- <div class="col-md-6 col-lg-3 ftco-animate">
             <div
               class="work img d-flex align-items-center"
               style="background-image: url(images/about.jpg)"
@@ -907,8 +904,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-3 ftco-animate">
+          </div> -->
+          <!-- <div class="col-md-6 col-lg-3 ftco-animate">
             <div
               class="work img d-flex align-items-center"
               style="background-image: url(images/about.jpg)"
@@ -927,7 +924,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
