--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
     <!--try/-->
 
-    <section class="ftco-section ftco-no-pt">
+    <!-- <section class="ftco-section ftco-no-pt">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12 col-lg-3 pr-md-4 pb-lg-0 pb-4">
@@ -563,7 +563,7 @@
                 </div>
               </div>
               <!-- The division index is been set col-md-6  -->
-              <div class="col-md-6 col-lg-6 ftco-animate d-flex">
+              <!-- <div class="col-md-6 col-lg-6 ftco-animate d-flex">
                 <div class="staff">
                   <div class="img-wrap d-flex align-items-stretch">
                     <div
@@ -617,7 +617,7 @@
         <!-- .row -->
       </div>
       <!-- .container -->
-    </section>
+    </section> --> -->
 
     <section class="ftco-section testimony-section ftco-bg-dark">
       <div class="container">
@@ -1041,7 +1041,6 @@
         </div>
       </div>
     </section>
-    <section class="ftco-section"></section>
     <section class="ftco-section list-cover">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
