--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@
                 <div
                   class="icon d-flex align-items-center justify-content-center"
                 >
-                  <span class="fa flaticon-sprayer"></span>
+                  <img src="./images/family.png" alt="" srcset="" height="40" width="40">
                 </div>
                 <h4 class="heading-2">Family Saver</h4>
                 <span class="price"
@@ -1090,7 +1090,7 @@
                 <div
                   class="icon d-flex align-items-center justify-content-center"
                 >
-                  <span class="fa flaticon-vacuum-cleaner"></span>
+                  <img src="./images/crown.png" alt="" srcset="" height="40" width="40">
                 </div>
                 <h4 class="heading-2">Premium Plan</h4>
                 <span class="price"
@@ -1125,7 +1125,7 @@
                 <div
                   class="icon d-flex align-items-center justify-content-center"
                 >
-                  <span class="fa flaticon-tap"></span>
+               <img src="./images/man.png" alt="" srcset="" height="40" width="40">
                 </div>
                 <h4 class="heading-2">Basic</h4>
                 <span class="price"
