--- a/pricing.html
+++ b/pricing.html
@@ -1320,167 +1320,142 @@
   </div>
 </section>
 
-  <section class="ftco-section table-cover">
-    <div class="container">
-      <div class="row justify-content-center pb-5 mb-3">
-        <div class="col-md-7 heading-section text-center ftco-animate">
-          <span class="subheading mb-3">Price &amp; Plans</span>
-          <h2>Choose Your Perfect Plans</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-lg-3 ftco-animate">
-          <div class="block-7">
-            <div class="text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-                <span class="fa flaticon-sprayer"></span>
-              </div>
-              <h4 class="heading-2">Famliy Saver</h4>
-              <span class="price"
-                ><sup>₹</sup> <span class="number">999</span></span
-              >
-
-              <ul class="pricing-text mb-5">
-                <li>
-                  <span class="fa fa-check mr-2"></span>Wash, Fold and Press
-                  Service
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>stain removal or
-                  garment repairs
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>weekly for any 5 loads
-                  with 10% discount.
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>Subscription covers
-                  the cost of 50 loads of laundry per month for family
-                  requirements.
-                </li>
-                <li><span class="fa fa-check mr-2"></span>express service</li>
-              </ul>
-
-              <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
-            </div>
+ 
+<section
+class="ftco-section ftco-intro"
+style="background-image: url('images/bg_3.jpg')"
+data-stellar-background-ratio="0.5"
+>
+<div class="overlay"></div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8 text-center">
+      <h2>Together we will explore new things</h2>
+      <a
+        href=""
+        class="icon-video d-flex align-items-center justify-content-center"
+        ><span class="fa fa-play"></span
+      ></a>
+    </div>
+  </div>
+</div>
+</section>
+<section class="ftco-section list-cover">
+<div class="container">
+  <div class="row justify-content-center pb-5 mb-3">
+    <div class="col-md-7 heading-section text-center ftco-animate">
+      <h5 style="color: white">Most Awaited Bundle Pack</h5>
+      <h2 style="color: white">Choose Your Perfect Plans</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-lg-4 ftco-animate">
+      <div class="block-7">
+        <div class="text-center">
+          <div
+            class="icon d-flex align-items-center justify-content-center"
+          >
+            <img src="./images/family.png" alt="" srcset="" height="40" width="40">
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
-          <div class="block-7 active">
-            <div class="text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-                <span class="fa flaticon-vacuum-cleaner"></span>
-              </div>
-              <h4 class="heading-2">Premium Plan</h4>
-              <span class="price"
-                ><sup>₹</sup> <span class="number">899</span></span
-              >
-
-              <ul class="pricing-text mb-5">
-                <li>
-                  <span class="fa fa-check mr-2"></span>Wash, dry and steam
-                  press service.
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>Premium dry-cleaning
-                  service for suits and formal wear.
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>Subscription includes
-                  unlimited laundry services.
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>12 loads of laundry
-                  per month for a typical household
-                </li>
-                <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
-              </ul>
-
-              <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-3 ftco-animate">
-          <div class="block-7">
-            <div class="text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-                <span class="fa flaticon-tap"></span>
-              </div>
-              <h4 class="heading-2">Basic</h4>
-              <span class="price"
-                ><sup>₹</sup> <span class="number">49-120</span></span
-              >
-
-              <ul class="pricing-text mb-5">
-                <li>
-                  <span class="fa fa-check mr-2"></span>Wash and fold service
-                  for regular Clothes
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>Ideal for individuals
-                  or families with busy schedules
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>hassle-free laundry
-                  solutions
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>Subscription typically
-                  covers the cost of 5/10
-                </li>
-                <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
-              </ul>
-
-              <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
-          <div class="block-7">
-            <div class="text-center">
-              <div
-                class="icon d-flex align-items-center justify-content-center"
-              >
-                <span class="fa flaticon-cleaning"></span>
-              </div>
-              <h4 class="heading-2">Business Attire</h4>
-              <span class="price"
-                ><sup>₹</sup><span class="number">179</span></span
-              >
-
-              <ul class="pricing-text mb-5">
-                <li>
-                  <span class="fa fa-check mr-2"></span>Pickup and delivery of
-                  business attire for professionals
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>Pressing and garment
-                  steaming included
-                </li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>Subscription typically
-                  includes 8 pieces of business attire per month.
-                </li>
-                <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
-                <li>
-                  <span class="fa fa-check mr-2"></span>Iron and Dry Cleaning
-                </li>
-              </ul>
-
-              <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
-            </div>
-          </div>
+          <h4 class="heading-2">Family Saver</h4>
+          <span class="price"
+            ><sup>₹</sup> <span class="number">999</span></span
+          >
+          <ul class="pricing-text mb-5">
+            <li>
+              <span class="fa fa-check mr-2"></span>Wash, Fold, and Press
+              Service
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>Stain Removal or
+              Garment Repairs
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>Weekly for Any 5 Loads
+              with 10% Discount
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>50 Loads of Laundry
+            </li>
+            <li><span class="fa fa-check mr-2"></span>Express Service</li>
+          </ul>
+          <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
         </div>
       </div>
     </div>
-  </section>
+    <div class="col-md-6 col-lg-4 ftco-animate">
+      <div class="block-7 active">
+        <div class="text-center">
+          <div
+            class="icon d-flex align-items-center justify-content-center"
+          >
+            <img src="./images/crown.png" alt="" srcset="" height="40" width="40">
+          </div>
+          <h4 class="heading-2">Premium Plan</h4>
+          <span class="price"
+            ><sup>₹</sup> <span class="number">899</span></span
+          >
+          <ul class="pricing-text mb-5">
+            <li>
+              <span class="fa fa-check mr-2"></span>Wash, Dry, and Steam
+              Press Service
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>Premium Dry-Cleaning
+              Service for Suits
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>Unlimited Laundry
+              Services
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>12 Loads of Laundry
+              per Month
+            </li>
+            <li><span class="fa fa-check mr-2"></span>Deep Cleaning</li>
+          </ul>
+          <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 col-lg-4 ftco-animate">
+      <div class="block-7">
+        <div class="text-center">
+          <div
+            class="icon d-flex align-items-center justify-content-center"
+          >
+         <img src="./images/man.png" alt="" srcset="" height="40" width="40">
+          </div>
+          <h4 class="heading-2">Basic</h4>
+          <span class="price"
+            ><sup>₹</sup> <span class="number">49-120</span></span
+          >
+          <ul class="pricing-text mb-5">
+            <li>
+              <span class="fa fa-check mr-2"></span>Wash and Fold Service
+              for Regular Clothes
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>Ideal for Individuals
+              or Families
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>Hassle-Free Laundry
+              Solutions
+            </li>
+            <li>
+              <span class="fa fa-check mr-2"></span>Subscription Covers
+              5-10 Loads
+            </li>
+            <li><span class="fa fa-check mr-2"></span>Deep Cleaning</li>
+          </ul>
+          <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
 
   <footer class="footer ftco-section footer-cover">
     <div class="container">
