--- a/index.html
+++ b/index.html
@@ -942,14 +942,14 @@
               <a
                 href="blog-single.html"
                 class="block-20 rounded"
-                style="background-image: url('images/carousel-1.jpg')"
+                style="background-image: url('images/Wavy_Bus-30_Single-02.jpg')"
               >
               </a>
               <div class="text mt-3 px-4">
                 <div class="posted mb-3 d-flex">
                   <div
                     class="img author"
-                    style="background-image: url(images/carousel-2.jpg)"
+                    style="background-image: url(images/Wavy_Bus-30_Single-02.jpg)"
                   ></div>
                   <div class="desc pl-3">
                     <span>Posted by ArvoDeep Das</span>
@@ -971,7 +971,7 @@
               <a
                 href="blog-single.html"
                 class="block-20 rounded"
-                style="background-image: url('images/carousel-1.jpg')"
+                style="background-image: url('images/10111398.jpg')"
               >
               </a>
               <div class="text mt-3 px-4">
@@ -997,7 +997,7 @@
               <a
                 href="blog-single.html"
                 class="block-20 rounded"
-                style="background-image: url('images/carousel-1.jpg')"
+                style="background-image: url('images/3959178.jpg')"
               >
               </a>
               <div class="text mt-3 px-4">
