--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <a href="#" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Services</a>
+              <a href="services.html" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
               <a href="pricing.html" class="nav-link">Pricing</a>
@@ -392,7 +392,13 @@
               <div
                 class="icon d-flex justify-content-center align-items-center"
               >
-                <span class="flaticon-workplace"></span>
+              <img
+              src="./images/laundry-machine.png"
+              alt=""
+              srcset=""
+              height="40"
+              width="40"
+            />
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Wash & Fold</h3>
@@ -418,7 +424,13 @@
               <div
                 class="icon d-flex justify-content-center align-items-center"
               >
-                <span class="flaticon-pool"></span>
+              <img
+              src="./images/iron.png"
+              alt=""
+              srcset=""
+              height="40"
+              width="40"
+            />
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Wash & Iron</h3>
@@ -444,7 +456,13 @@
               <div
                 class="icon d-flex justify-content-center align-items-center"
               >
-                <span class="flaticon-rug"></span>
+              <img
+              src="./images/steam-iron.png"
+              alt=""
+              srcset=""
+              height="40"
+              width="40"
+            />
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Steam iron</h3>
@@ -469,7 +487,13 @@
               <div
                 class="icon d-flex justify-content-center align-items-center"
               >
-                <span class="flaticon-vacuum"></span>
+              <img
+              src="./images/towels.png"
+              alt=""
+              srcset=""
+              height="40"
+              width="40"
+            />
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Dry Cleaning</h3>
