--- a/index.html
+++ b/index.html
@@ -383,117 +383,23 @@
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <span class="subheading">Services</span>
-            <h2>How We Works</h2>
+            <h2>How We Work</h2>
           </div>
         </div>
+        <!-- Dry Cleaning on top -->
         <div class="row">
-          <div class="col-md-6 col-lg-3 services ftco-animate">
+          <div class="col-md-12 col-lg-12 services ftco-animate text-center">
             <div class="d-block d-flex">
               <div
                 class="icon d-flex justify-content-center align-items-center"
               >
-              <img
-              src="./images/laundry-machine.png"
-              alt=""
-              srcset=""
-              height="40"
-              width="40"
-            />
-              </div>
-              <div class="media-body pl-3">
-                <h3 class="heading">Wash & Fold</h3>
-                <p
-                  style="
-                    color: black;
-                    font-family: Arial, Helvetica, sans-serif;
-                    font-weight: 400 !important;
-                  "
-                >
-                  A whiter-than-white shirt. A crisp cotton saree. A well-worn
-                  pair of rugged jeans. King-sized bed linen. Monday-to-Friday
-                  socks. Well, this load is going to need high levels of hygiene
-                  and cleanliness – and also a challenging amount of compact
-                  folding. We know what it means: you didn’t just download an
-                  app … you offloaded a weight off your mind.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 services ftco-animate">
-            <div class="d-block d-flex">
-              <div
-                class="icon d-flex justify-content-center align-items-center"
-              >
-              <img
-              src="./images/iron.png"
-              alt=""
-              srcset=""
-              height="40"
-              width="40"
-            />
-              </div>
-              <div class="media-body pl-3">
-                <h3 class="heading">Wash & Iron</h3>
-                <p
-                  style="
-                    color: black;
-                    font-family: Arial, Helvetica, sans-serif;
-                    font-weight: 400 !important;
-                  "
-                >
-                  Office wear shirt. Evening wear salwar kameez. Daily wear
-                  pyjamas. Sportswear sweat pants. Holiday wear bermudas. Hmm,
-                  that’s a time, energy and space consuming list if you ever saw
-                  one. We can confidently say this: you’re not just arranging
-                  for a laundry service now … you’re rearranging your day and
-                  life.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 services ftco-animate">
-            <div class="d-block d-flex">
-              <div
-                class="icon d-flex justify-content-center align-items-center"
-              >
-              <img
-              src="./images/steam-iron.png"
-              alt=""
-              srcset=""
-              height="40"
-              width="40"
-            />
-              </div>
-              <div class="media-body pl-3">
-                <h3 class="heading">Steam iron</h3>
-                <p
-                  style="
-                    color: black;
-                    font-family: Arial, Helvetica, sans-serif;
-                    font-weight: 400 !important;
-                  "
-                >
-                  A wrinkled business shirt. A crumpled dress. A badly creased
-                  pair of trousers. A crushed uniform. A crinkled scarf. Oh-oh,
-                  if this lot is oddly familiar, strike while the iron is hot.
-                  We know what it means: you’re not looking for well-pressed
-                  garments… you’re ironing out the stresses of the day.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 services ftco-animate">
-            <div class="d-block d-flex">
-              <div
-                class="icon d-flex justify-content-center align-items-center"
-              >
-              <img
-              src="./images/towels.png"
-              alt=""
-              srcset=""
-              height="40"
-              width="40"
-            />
+                <img
+                  src="./images/towels.png"
+                  alt=""
+                  srcset=""
+                  height="40"
+                  width="40"
+                />
               </div>
               <div class="media-body pl-3">
                 <h3 class="heading">Dry Cleaning</h3>
@@ -514,9 +420,52 @@
             </div>
           </div>
         </div>
+        <!-- Rest of the services in a new container -->
+        <div class="row mt-4">
+          <div class="col-md-4 services ftco-animate">
+            <div class="d-block d-flex">
+              <div class="icon d-flex justify-content-center align-items-center">
+                <img src="./images/laundry-machine.png" alt="" height="40" width="40" />
+              </div>
+              <div class="media-body pl-3">
+                <h3 class="heading">Wash & Fold</h3>
+                <p>
+                  A whiter-than-white shirt. A crisp cotton saree. A well-worn pair of rugged jeans. King-sized bed linen. Monday-to-Friday socks. Well, this load is going to need high levels of hygiene and cleanliness – and also a challenging amount of compact folding. We know what it means: you didn’t just download an app … you offloaded a weight off your mind.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 services ftco-animate">
+            <div class="d-block d-flex">
+              <div class="icon d-flex justify-content-center align-items-center">
+                <img src="./images/iron.png" alt="" height="40" width="40" />
+              </div>
+              <div class="media-body pl-3">
+                <h3 class="heading">Wash & Iron</h3>
+                <p>
+                  Office wear shirt. Evening wear salwar kameez. Daily wear pyjamas. Sportswear sweat pants. Holiday wear bermudas. Hmm, that’s a time, energy and space consuming list if you ever saw one. We can confidently say this: you’re not just arranging for a laundry service now … you’re rearranging your day and life.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 services ftco-animate">
+            <div class="d-block d-flex">
+              <div class="icon d-flex justify-content-center align-items-center">
+                <img src="./images/steam-iron.png" alt="" height="40" width="40" />
+              </div>
+              <div class="media-body pl-3">
+                <h3 class="heading">Steam Iron</h3>
+                <p>
+                  A wrinkled business shirt. A crumpled dress. A badly creased pair of trousers. A crushed uniform. A crinkled scarf. Oh-oh, if this lot is oddly familiar, strike while the iron is hot. We know what it means: you’re not looking for well-pressed garments… you’re ironing out the stresses of the day.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-
+    
+    
     <!--try-->
 
     <!--try/-->
